--- a/Index.html
+++ b/Index.html
@@ -7,10 +7,13 @@
     <title>João Vitor Malheiros Rodrigues</title>
 </head>
 <body>
-    <!--Esse header representa o cabeçalho da página:-->
+    <!--Este header representa o cabeçalho da página:-->
     <header>
         <!--Título do conteúdo-->
         <h1>João Vitor Malheiros Rodrigues</h1>
+        <!--Se imagem estivesse em outro site, teria que colocar o endereço completo dela-->
+        <!--alt é a descrição da imagem. Caso um dia a imagem não existir mais, ou endereço errado, aparece a descrição-->
+        <img src = "Foto-Joao-Vitor.jpg.jpg" alt = "Foto do rosto do João Malheiros">
     </header>
     <!--Section para representar a lista de posts:-->
     <section>
@@ -23,7 +26,10 @@
             <!--header para representar o nome do post-->
             <header>
                 <h3>Post #1</h3>
+                <img src = "" alt="Editor de texto contendo código html">
+                <!--Usar tinypng.com para remover alguns dados desnecessários das imagens!-->
             </header>
+            <!--<p> é para o parágrafo-->
             <p>
                 "Lorem ipsum dolor sit amet, <a href="https://www.linkedin.com/in/joaovmalheiros/" target ="_blank">consectetur adipiscing</a> 
                 elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad <a href="mailto:joao.vmalheiros@gmail.com"> minim veniam</a>, quis nostrud exercitation 
@@ -32,8 +38,20 @@
             </p>
         </article>
     </section>
-    <!--Elemento footer para representar a lista de contatos mais pra frente:-->
-    <footer></footer>
+    <!--Elemento footer para representar o rodapé e a lista de contatos mais pra frente:-->
+    <footer>
+        <ul>
+            <li>
+                <a href="mailto:joao.vmalheiros@gmail.com" target="_blank">joao.vmalheiros@gmail.com</a> 
+            </li>
+            <li>
+                <a href="https://www.linkedin.com/in/joaovmalheiros/" target="_blank">Linkedin</a>
+            </li>
+            <li>
+                <a href="https://github.com/joaovmalheiros/" target="_blank">Github</a>
+            </li>
+        </ul>
+    </footer>
 </body>
 </html>
 
@@ -53,4 +71,16 @@
     O target serve para nos indicar como esse link será aberto:
     No caso abaixo, o _blank indica que o link deve ser aberto em uma nova aba
     <a target="_blank">Link</a>
+
+    Listas:
+    <ul>   (Ordem dos itens não é importante)
+    Item 1
+    Item 2
+
+    <ol>  (ordem dos itens é importante - números, letras ou algarismos romanos para ordenar)
+    1. Item 1
+    2. Item 3
+
+    <li> (é um elemento na lista)
+    
 -->
