--- a/Index.html
+++ b/Index.html
@@ -15,7 +15,7 @@
         <h1 id="title">João Vitor Malheiros Rodrigues</h1>
         <!--Se imagem estivesse em outro site, teria que colocar o endereço completo dela-->
         <!--alt é a descrição da imagem. Caso um dia a imagem não existir mais, ou endereço errado, aparece a descrição-->
-        <img src = "Foto-Joao-Vitor.jpg.jpg" alt = "Foto do rosto do João Malheiros">
+        <img src = "Foto-Joao-Vitor.jpg.jpg" alt = "Foto do rosto do João Malheiros" class="photo">
     </header>
     <!--Section para representar a lista de posts:-->
     <section>
@@ -28,11 +28,11 @@
             <!--header para representar o nome do post-->
             <header>
                 <h3 class="post_title">Post #1</h3>
-                <img src = "" alt="Editor de texto contendo código html">
+                <img src = "" alt="Editor de texto contendo código html" class ="post_image">
                 <!--Usar tinypng.com para remover alguns dados desnecessários das imagens!-->
             </header>
             <!--<p> é para o parágrafo-->
-            <p>
+            <p class="post_content">
                 "Lorem ipsum dolor sit amet, <a href="https://www.linkedin.com/in/joaovmalheiros/" target ="_blank">consectetur adipiscing</a> 
                 elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad <a href="mailto:joao.vmalheiros@gmail.com"> minim veniam</a>, quis nostrud exercitation 
                 ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum 
@@ -42,7 +42,7 @@
     </section>
     <!--Elemento footer para representar o rodapé e a lista de contatos mais pra frente:-->
     <footer>
-        <ul>
+        <ul class="contacts_list">
             <li>
                 <a href="mailto:joao.vmalheiros@gmail.com" target="_blank">joao.vmalheiros@gmail.com</a> 
             </li>
