--- a/Index.html
+++ b/Index.html
@@ -28,7 +28,7 @@
             <!--header para representar o nome do post-->
             <header>
                 <h3 class="post_title">Post #1</h3>
-                <img src = "" alt="Editor de texto contendo código html" class ="post_image">
+                <img src = "imagem-codigo-html.jpg" alt="Editor de texto contendo código html" class ="post_image">
                 <!--Usar tinypng.com para remover alguns dados desnecessários das imagens!-->
             </header>
             <!--<p> é para o parágrafo-->
