--- a/Index.html
+++ b/Index.html
@@ -11,11 +11,11 @@
 <body>
     <!--Este header representa o cabeçalho da página:-->
     <header>
-        <!--Título do conteúdo-->
-        <h1 id="title">João Vitor Malheiros Rodrigues</h1>
         <!--Se imagem estivesse em outro site, teria que colocar o endereço completo dela-->
         <!--alt é a descrição da imagem. Caso um dia a imagem não existir mais, ou endereço errado, aparece a descrição-->
         <img src = "Foto-Joao-Vitor.jpg.jpg" alt = "Foto do rosto do João Malheiros" class="photo">
+        <!--Título do conteúdo-->
+        <h1 id="title">João Malheiros</h1>
     </header>
     <!--Section para representar a lista de posts:-->
     <section>
